// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateStandardLineChartOptions should generate standard line chart options 1`] = `
{
  "accessibility": {
    "description": "accessibility",
    "enabled": false,
  },
  "chart": {
    "animation": false,
    "height": "50%",
    "spacingBottom": 50,
    "spacingTop": 20,
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "legend": {
    "align": "left",
    "title": {
      "text": "Areas",
    },
    "verticalAlign": "top",
  },
  "series": [
    {
      "color": "#F46A25",
      "data": [
        [
          2004,
          703.420759,
        ],
        [
          2006,
          278.29134,
        ],
      ],
      "marker": {
        "symbol": "arc",
      },
      "name": "North FooBar",
      "type": "line",
    },
    {
      "color": "#B1B4B6",
      "data": [
        [
          2004,
          441.69151,
          578.32766,
        ],
        [
          2006,
          441.69151,
          578.32766,
        ],
      ],
      "lineWidth": 2,
      "name": "North FooBar",
      "type": "errorbar",
      "visible": false,
      "whiskerLength": "20%",
    },
  ],
  "title": {
    "style": {
      "display": "none",
    },
  },
  "tooltip": {
    "formatter": [Function],
  },
  "xAxis": {
    "allowDecimals": false,
    "tickLength": 0,
    "title": {
      "margin": 20,
      "text": "xAxis",
    },
  },
  "yAxis": {
    "minorTickInterval": "auto",
    "minorTicksPerMajor": 2,
    "title": {
      "margin": 20,
      "text": "yAxis",
    },
  },
}
`;

exports[`generateStandardLineChartOptions should generate standard line chart options with benchmark data 1`] = `
{
  "accessibility": {
    "description": "accessibility",
    "enabled": false,
  },
  "chart": {
    "animation": false,
    "height": "50%",
    "spacingBottom": 50,
    "spacingTop": 20,
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "legend": {
    "align": "left",
    "title": {
      "text": "Areas",
    },
    "verticalAlign": "top",
  },
  "series": [
    {
      "color": "#505A5F",
      "data": [
        [
          2004,
          703.420759,
        ],
        [
          2006,
          278.29134,
        ],
      ],
      "marker": {
        "symbol": "circle",
      },
      "name": "Benchmark: England",
      "type": "line",
    },
    {
      "color": "#28A197",
      "data": [
        [
          2004,
          301,
        ],
        [
          2006,
          300,
        ],
      ],
      "marker": {
        "symbol": "diamond",
      },
      "name": "Group: Parent",
      "type": "line",
    },
    {
      "color": "#F46A25",
      "data": [
        [
          2004,
          703.420759,
        ],
        [
          2006,
          278.29134,
        ],
      ],
      "marker": {
        "symbol": "arc",
      },
      "name": "North FooBar",
      "type": "line",
    },
    {
      "color": "#B1B4B6",
      "data": [
        [
          2004,
          441.69151,
          578.32766,
        ],
        [
          2006,
          441.69151,
          578.32766,
        ],
      ],
      "lineWidth": 2,
      "name": "North FooBar",
      "type": "errorbar",
      "visible": false,
      "whiskerLength": "20%",
    },
  ],
  "title": {
    "style": {
      "display": "none",
    },
  },
  "tooltip": {
    "formatter": [Function],
  },
  "xAxis": {
    "allowDecimals": false,
    "tickLength": 0,
    "title": {
      "margin": 20,
      "text": "xAxis",
    },
  },
  "yAxis": {
    "minorTickInterval": "auto",
    "minorTicksPerMajor": 2,
    "title": {
      "margin": 20,
      "text": "yAxis",
    },
  },
}
`;
